--- a/style.css
+++ b/style.css
@@ -3,9 +3,13 @@
   position: relative;
 }
 
+body{
+
+}
+
 #nav {
   border: 1px ;
-  background-color: rgba(245, 245, 245, 0.9);
+  background-color: rgba(59, 58, 54, 0.9);
 
   position: fixed;
   top: 0;
@@ -24,29 +28,33 @@ h1{
 }
 
 #content {
-  border: 1px ;
+  background-color: #e1e8f0;
 }
 
 .container {
-  border: 1px ;
   border-left:1px solid lightgrey; 
   border-right:1px solid lightgrey;
   width: 900px;
   margin: 0 auto;
+  background-color: #fff;
 }
 
 #about, #my-work, #contact-me {
-  border: 1px ;
   padding-top: 80px;
   padding-left: 50px;
   padding-right: 50px;
+  padding-bottom: 1px;
+  display: block;
 }
 
 hr.bar {
-  border: 2px solid #ff6600;
   width: 80px;
   margin: 20px auto;
+  background-color: orange;
+  padding-top: 2px;
+  border: 0;
 }
+
 
 #my-work, #contact-me{
 	margin-top: -80px;
@@ -59,27 +67,25 @@ hr.bar {
   padding: 10px 0;
   margin: 0 10px;
 
-  border: 1px;
   border-radius: 8px;
 
   list-style-type: none;
   text-align: center;
-  background-color: #C0C0C0;
+  background-color: #e1e8f0;
 }
 
 li a {
   display: block;
-  color: #505050;
+  color: #3b3a36;
   text-decoration: none;
 }
 
 li:hover  {
-  border: 1px ;
-  background-color: #505050;
+  background-color: #22264b;
 }
 
 li:hover a {
-  color: #C0C0C0;
+  color: #e1e8f0;
   font-weight: 800;
 }
 
@@ -114,13 +120,10 @@ td {
   padding-left: 10px;
 }
 
-hr {
-  border: 0.5px ;
-}
 
 .item {
   position: relative;
-  width: 30%;
+  max-width: 30%;
   display: inline-block;
   margin-bottom: 10px;
 }
@@ -131,7 +134,6 @@ hr {
 }
 
 .item-info {
-  border: 1px ;                    /* 標示用，排版完記得拿掉 */
   background-color: rgba(255,255,255,.8);   /* 背景半透明 */
 
   position: absolute;
@@ -150,12 +152,8 @@ hr {
   opacity: 1;
 }
 
-#contact-me {
-  border: 1px ;  /* 標示用，完成後刪除 */
-}
 
 form.contact-form {
-  border: 1px ;  /* 標示用，完成後刪除 */
   width: 50%;
   margin: 0 auto;
 }
@@ -196,10 +194,78 @@ form.contact-form {
   background-color: #407FC7;
 }
 
-.buttom{
-	height:800px;
-}
-
 #my-work-gallery {
     text-align: center;
 }
+
+@media (min-width: 1024px) {
+  .menu-button ,
+  .menu-button-checkbox{
+    display: none;
+  }
+}
+
+@media (max-width: 1023px) {
+
+.container {
+    width: auto;
+  }
+
+.menu-button {
+    float: right;
+    font-size: 25px;
+    line-height: 40px;
+    color: white;
+    background: transparent;
+    padding: 0 15px;
+    border: 0;
+  }
+.menu-button-checkbox {
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 55px;
+    height: 40px;
+    opacity: 0;
+  }
+
+.menu-button-checkbox:checked ~ .menu {
+    display: block;
+  }
+  
+.menu {
+    background-color: rgba(59, 58, 54, 0.9);
+    display: none;
+    margin-top: 0;
+    padding-left: 0;
+    position: fixed;
+    right: 0;
+    top: 40px;
+    width: 166px;
+  }
+
+.menu li {
+  margin: 8px;
+  }
+
+#my-avatar {
+  width: 100%; 
+}
+
+#my-avatar img {
+  display: block;
+  margin: 15px auto;
+}
+
+.item {
+    max-width: 100%;
+  }
+
+form.contact-form {
+    width: 80%;
+  }
+
+}
+
+/* utility */
+
